--- a/site-reliability-engineer.html
+++ b/site-reliability-engineer.html
@@ -41,7 +41,7 @@
     <div class="container">
 <!--Begin body here --> 
 <h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qS09VfwG&k=Job&j=oDQ89fwu&__jvst=Employee+Referral&__jvsd=snfTCgwS&__jvsc=Twitter&bid=nmx2pMwB'>Palo Alto Networks Careers - Principal Site Reliability Engineer (Cloud Infrastructure)</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Palo Alto Palo Alto Santa Clara, California  Palo Alto</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
 <h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qS09VfwG&k=Job&j=oCQ89fwt&__jvst=Employee+Referral&__jvsd=snfTCgwS&__jvsc=Twitter&bid=nVgmpMwd'>Palo Alto Networks Careers - Senior Site Reliability Engineer (Cloud Infrastructure)</a></h5> 
@@ -84,7 +84,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.okta.com/company/careers/engineering/site-reliability-engineer-govcloud-senior-staff-principal-1868812/?gh_src=82a8057f1'>Site Reliability Engineer, GovCloud (Senior/Staff/Principal) | Okta</a></h5> 
+<h5><a href='https://www.okta.com/company/careers/engineering/site-reliability-engineer-govcloud-senior-staff-principal-1868812/?gh_src=82a8057f1'>Site Reliability Engineer, GovCloud (Senior/Staff/Principal) | Okta</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -116,7 +116,7 @@
 <p><span class="badge badge-light">Buenos Aires, Argentina</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/SGDigital/743999698463251-site-reliability-engineer-l3'>SG Digital Site Reliability Engineer L3 | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/SGDigital/743999698463251-site-reliability-engineer-l3'>SG Digital Site Reliability Engineer L3 | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Bristol, UK</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -138,7 +138,7 @@ Clearance Required. California - San Francisco Virginia - Herndon?...</p>
 <p><span class="badge badge-light">Toronto, Canada  Toronto</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/splunk/job/omvobfwa'>Splunk Careers - Cloud Site Reliability Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/splunk/job/omvobfwa'>Splunk Careers - Cloud Site Reliability Engineer</a></h5> 
 <p><span class="badge badge-light">London, United Kingdom  San Francisco Sydney</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -232,7 +232,7 @@ Clearance Required. California - San Francisco Virginia - Herndon?...</p>
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/amount/e0951968-1ee0-4355-bce1-b89ecf7a8969'>Amount - Site Reliability Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/amount/e0951968-1ee0-4355-bce1-b89ecf7a8969'>Amount - Site Reliability Engineer</a></h5> 
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -306,7 +306,7 @@ Clearance Required. California - San Francisco Virginia - Herndon?...</p>
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/splunk/job/oQ5lbfwb'>Splunk Careers - Site Reliability Engineer Intern (Summer 2020)</a></h5> 
+<h5><a href='http://jobs.jobvite.com/splunk/job/oQ5lbfwb'>Splunk Careers - Site Reliability Engineer Intern (Summer 2020)</a></h5> 
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -319,7 +319,7 @@ customer experience, and increase the overall value of supported applications.</
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.mongodb.com/careers/job/?gh_jid=1659874&gh_src=ab75357b1'>Site Reliability Engineer, Cloud Services (EMEA) | MongoDB</a></h5> 
+<h5><a href='https://www.mongodb.com/careers/job/?gh_jid=1659874&gh_src=ab75357b1'>Site Reliability Engineer, Cloud Services (EMEA) | MongoDB</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-23</p>
 <hr/>
@@ -371,7 +371,7 @@ customer experience, and increase the overall value of supported applications.</
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/anchorfree/jobs/1867226'>Job Application for Lead Site Reliability Engineer (python/infrastructure) at Pango Inc. </a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/anchorfree/jobs/1867226'>Job Application for Lead Site Reliability Engineer (python/infrastructure) at Pango Inc. </a></h5> 
 <p><span class="badge badge-light">Redwood City</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
@@ -381,7 +381,7 @@ customer experience, and increase the overall value of supported applications.</
 Engineering; Experienced. Share. Theorem is a software consultancy that 
 believes?...</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/farfetch/job/oD5mbfwZ'>Farfetch Careers - Site Reliability Engineering Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/farfetch/job/oD5mbfwZ'>Farfetch Careers - Site Reliability Engineering Manager</a></h5> 
 <p><span class="badge badge-light">Porto, Portugal</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
@@ -389,7 +389,7 @@ believes?...</p>
 <p><span class="badge badge-light">Porto, Portugal</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
-<h5><a href='https://raisin.join.com/jobs/423348-devops-site-reliability-engineer-m-f-d'>Job @ Raisin (Berlin): DevOps/Site Reliability Eng... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://raisin.join.com/jobs/423348-devops-site-reliability-engineer-m-f-d'>Job @ Raisin (Berlin): DevOps/Site Reliability Eng... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany  Berlin</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
@@ -406,7 +406,7 @@ believes?...</p>
 <p>Oct 8, 2019 ... We are looking for an experienced Site Reliability Engineer to join our Platforms 
 team based in Wellington. At SilverStripe, our mission is to help everyone have?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qB09Vfwp&k=Job&j=oy97afwI&__jvst=Employee+Referral&__jvsd=sB4xJgwG&__jvsc=Twitter&bid=nflHeMwM'>NICE inContact Careers - Senior Specialist Site Reliability Engineer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qB09Vfwp&k=Job&j=oy97afwI&__jvst=Employee+Referral&__jvsd=sB4xJgwG&__jvsc=Twitter&bid=nflHeMwM'>NICE inContact Careers - Senior Specialist Site Reliability Engineer</a></h5> 
 <p><span class="badge badge-light">Pune, India</span></p>
 <p>Posted on:: 2019-10-20</p>
 <hr/>
